--- a/src/modules/header_mixin.pug
+++ b/src/modules/header_mixin.pug
@@ -10,6 +10,7 @@ mixin header(title)
       // css links
       link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
       link(rel="stylesheet" href="css/example.css")
+      link(href="https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400" rel="stylesheet")
 
       // Script imports
       script(src="http://localhost:35729/livereload.js")
