--- a/src/sass/example.sass
+++ b/src/sass/example.sass
@@ -1,10 +1,11 @@
 *
   margin: 0
   padding: 0
+  font-family: 'Droid Serif', serif
 
 body
-  background: #B27D6B
-  color: white
+  background: #ffe2b4
+  color: darken(#B27D6B, 10%)
   text-align: center
 
 .hero
