--- a/src/modules/header_mixin.pug
+++ b/src/modules/header_mixin.pug
@@ -1,4 +1,5 @@
 mixin header(title)
+
   doctype html
   html(lang="en")
     head
@@ -11,6 +12,7 @@ mixin header(title)
       link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
       link(rel="stylesheet" href="css/example.css")
       link(href="https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400" rel="stylesheet")
+      link(href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css" rel="stylesheet")
 
       // Script imports
       script(src="http://localhost:35729/livereload.js")
