--- a/src/sass/example.sass
+++ b/src/sass/example.sass
@@ -7,15 +7,21 @@ body
   background: #ffe2b4
   color: darken(#B27D6B, 10%)
   text-align: center
+  text-shadow: rgba(0, 0, 0, 0.2) 0px 2px 3px
 
 .hero
+
+.topspace
   background: white
   height: 33vh
 
-  .topspace
-    padding-top: 23vh
+  + *
+    position: relative
+    top: -60px
 
 .footer, footer
   position: absolute
   bottom: 1rem
+  left: 3rem
+  right: 3rem
   color: white
